--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -17,7 +17,7 @@
         ngModel
         name="author"
       />
-      <button class="btn btn-warning mt-2" (click)="flagEditClose()">
+      <button type="button" class="btn btn-warning mt-2" (click)="flagEditClose()">
         Close
       </button>
       <button type="submit"
