--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -23,3 +23,12 @@
     z-index: 100;
     top:50%;
 }
+
+
+@media (max-width:768px){
+    .edit-model{
+        width: 95%;
+        height: 300px;
+
+    }
+}
